--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "postbuild": "node ./scripts/copy-scaffold-files.js",
+    "prewatch": "node ./scripts/copy-scaffold-files.js",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
