--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20.2.5",
     "@umbraco-cms/backoffice": "file:umbraco-cms-backoffice-14.0.0--preview004.tgz",
     "figlet": "^1.6.0",
-    "import-meta-resolve": "^4.0.0"
+    "import-meta-resolve": "^4.0.0",
+    "vite": "^5.0.2"
   }
 }
